Bug 112939 - Color on drop-down color chooser is always black instead of chosen color
Summary: Color on drop-down color chooser is always black instead of chosen color
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha0+
Hardware: x86 (IA32) Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.0.0
Keywords: bibisected, bisected, regression
: 112952 (view as bug list)
Depends on:
Blocks: Color-Picker-Widget
  Show dependency treegraph
 
Reported: 2017-10-06 15:06 UTC by Regina Henschel
Modified: 2017-11-09 07:49 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of character properties Border (23.33 KB, image/png)
2017-10-06 15:06 UTC, Regina Henschel
Details
Screeshot of application color (57.54 KB, image/png)
2017-10-06 15:06 UTC, Regina Henschel
Details
Screenshot of Writer Changes (47.00 KB, image/png)
2017-10-06 15:07 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2017-10-06 15:06:13 UTC
Created attachment 136806 [details]
Screenshot of character properties Border

A special kind of color drop-down chooser shows always black instead of the chosen color.
Effected places are e.g.
Tools > Options > LibreOffice > Application Color
Tools > Options > Writer > Changes
Character Properties > Border

It is OK in Version: 6.0.0.0.alpha0+
Build ID: fc61be93c60967bf1d6bcffcada8189016d4530e
CPU threads: 4; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-09-04_23:40:52
Locale: de-DE (de_DE); Calc: group

It is buggy in Version: 6.0.0.0.alpha0+
Build ID: 499194508c8cf91fbbc21f882bcf4ace77e19eaa
CPU threads: 4; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-09-30_06:14:26
Locale: de-DE (de_DE); Calc: group

The regression was likely introduced, when in Tools > Options > LibreOffice > Application Color the right column of colors has been removed.
Comment 1 Regina Henschel 2017-10-06 15:06:50 UTC
Created attachment 136807 [details]
Screeshot of application color
Comment 2 Regina Henschel 2017-10-06 15:07:28 UTC
Created attachment 136808 [details]
Screenshot of Writer Changes
Comment 3 Xisco Faulí 2017-10-06 16:49:21 UTC
it seems to be win only

Version: 6.0.0.0.alpha0+
Build ID: ca95e886b42157d1d6394ed0b4c910978f5c2fda
CPU threads: 1; OS: Windows 6.1; UI render: default; 
Locale: es-ES (es_ES); Calc: group

not reproducible in

Version: 6.0.0.0.alpha0+
Build ID: 34f4446b0a5e04465216ff4ec2547aa82e0f06c2
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk2; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 4 Xisco Faulí 2017-10-06 21:18:25 UTC
*** Bug 112952 has been marked as a duplicate of this bug. ***
Comment 5 raal 2017-10-06 21:29:47 UTC
This seems to have begun at the below commit.
Adding Cc: to Noel Grandin; Could you possibly take a look at this one? Thanks
 3c0341afe087fc66e782bb87b2bf8d40d4aa39b8 is the first bad commit
commit 3c0341afe087fc66e782bb87b2bf8d40d4aa39b8
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Sat Sep 30 16:47:35 2017 -0700

    source 404630c6052919c1a0b5dab405084c2a39fc2f5c

author	Noel Grandin <noel.grandin@collabora.co.uk>	2017-09-27 09:36:18 (GMT)
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2017-09-27 10:59:25 (GMT)
commit 404630c6052919c1a0b5dab405084c2a39fc2f5c (patch)
tree b27ac3d74104ee750bb1aac45800923632a59b4e
parent f7445e1014815a9eb02e2c22257bbce32dc43589 (diff)
simplify Bitmap operator==/IsEqual (stage1)
Comment 6 Commit Notification 2017-10-09 19:06:06 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=19e37a2c8097ee4878a593cad4ce01d9fc5b24fb

tdf#112939 Color on drop-down color chooser is always black

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2017-11-09 07:48:43 UTC
A polite ping to Noel Grandin: is this bug fixed? if so, could you please close it as RESOLVED FIXED ? Thanks