tdf#112939 Color on drop-down color chooser is always black

regression from
    commit 404630c6052919c1a0b5dab405084c2a39fc2f5c
    simplify Bitmap operator==/IsEqual (stage1)

Change-Id: Ifabbfb28e0ccbe28b19db7f2c50e6d6f55569f9a